--- a/tem/src/main/resources/templates/signup_form.html
+++ b/tem/src/main/resources/templates/signup_form.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<link rel="stylesheet" href="style.css">
 <head>
 	<meta charset="ISO-8859-1">
 	<title>Registrazione - Transport Efficiency Manager</title>
-	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 </head>
 <body>
