--- a/tem/src/main/resources/templates/users.html
+++ b/tem/src/main/resources/templates/users.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<link rel="stylesheet" href="style.css">
 <head>
 	<meta charset="ISO-8859-1">
 	<title>List Users</title>
-	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
 <div class="container text-center">
