--- a/tem/src/main/resources/templates/login.html
+++ b/tem/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Please sign in</title>
-    
+    <nav th:replace="/header :: header"></nav>
   </head>
   <body>
 
