--- a/tem/src/main/resources/templates/register_success.html
+++ b/tem/src/main/resources/templates/register_success.html
@@ -6,6 +6,7 @@
     <title>Registration Success</title>
 </head>
 <body>
+	<nav th:replace="/header :: header"><p>Prova</p></nav>
     <div class="container text-center">
         <h3>Hai effettuato l'accesso con successo!</h3>
         <h4><a href="/login">Clicca qui per effettuare il Login</a></h4>
