--- a/tem/src/main/resources/templates/signup_form.html
+++ b/tem/src/main/resources/templates/signup_form.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 </head>
 <body>
+	<nav th:replace="/header :: header"><p>Prova</p></nav>
 	<div class="container text-center">
 		<div>
 			<h1>Registrazione utente</h1>
