--- a/tem/src/main/resources/templates/users.html
+++ b/tem/src/main/resources/templates/users.html
@@ -6,6 +6,7 @@
 	<title>List Users</title>
 </head>
 <body>
+<nav th:replace="/header :: header"><p>Prova</p></nav>
 <div class="container text-center">
 	<div>
 		<form th:action="@{/logout}" method="post">
