--- a/tem/src/main/resources/templates/index.html
+++ b/tem/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 </head>
 <body>
+	<nav th:replace="/header :: header"><p>Prova</p></nav>
     <div class="container text-center">
         <h1>Benvenuto su Transport Efficiency Manager</h1>
         <h3><a href="/users">Lista degli utenti</a></h3>
