Modifiche al front end e bug fix
- Eliminate le cartelle all'interno di "templates" per garantire il funzionamento corretto di Thymeleaf
- Di conseguenza, sono stati corretti i valori di ritorno dei Controller
- Aggiunta la struttura necessaria per il funzionamento di Thymeleaf con file statici come css e immagini
- Corretto un typo nel file che modella la registrazione di un nuovo utente

--- a/tem/src/main/resources/templates/edit-conducente.html
+++ b/tem/src/main/resources/templates/edit-conducente.html
@@ -5,6 +5,7 @@
 	<title>Modifica conducente - Transport Efficiency Manager</title>
 	<link rel="stylesheet" href="style.css">
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+	<link rel="stylesheet" href="css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
 	<div class="container text-center">
