--- a/tem/src/main/resources/templates/header.html
+++ b/tem/src/main/resources/templates/header.html
@@ -6,7 +6,7 @@
 <body>
 
 <nav th:fragment="header">
-    <p>Footer</p>
+    <img id="logo" src="img/logo.png" th:src="@{/img/logo.png}" alt="logo"></img>
 </nav>
 
 </body>
