--- a/tem/src/main/resources/templates/index.html
+++ b/tem/src/main/resources/templates/index.html
@@ -5,6 +5,8 @@
     <meta charset="ISO-8859-1">
     <title>Transport Efficiency Manager</title>
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/style.css" th:href="@{/css/style.css}"> 
+    
 </head>
 <body>
 	<nav th:replace="/header :: header"><p>Prova</p></nav>
