--- a/tem/src/main/resources/templates/users.html
+++ b/tem/src/main/resources/templates/users.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>List Users</title>
+	<link rel="stylesheet" href="css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
 <nav th:replace="/header :: header"><p>Prova</p></nav>
