--- a/tem/src/main/resources/templates/edit-linea.html
+++ b/tem/src/main/resources/templates/edit-linea.html
@@ -4,32 +4,33 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Update User</title>
+    <title>Linea operations - Transport Efficiency Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css" th:href="@{/css/style.css}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="container my-5">
-        <h3> Modifica Mezzo</h3>
+        <h3>Inserisci/modifica Linea</h3>
         <div class="card">
             <div class="card-body">
                 <div class="col-md-8">
-                    <form action="#" th:action="@{/risorse/submit/mezzo}" th:object="${mezzo}" method="post">
+                    <form action="#" th:action="@{/risorse/update/linea/{id}(id=${linea.id})}" th:object="${linea}" method="post">
                         <div class="row">
                             <div class="form-group col-md-6">
-                                <label for="capienza" class="col-form-label">Capienza</label> <input type="number" th:field="${mezzo.capienza}" class="form-control" id="capienza" placeholder="Capienza"> <span th:if="${#fields.hasErrors('capienza')}" th:errors="*{capienza}" class="text-danger"></span>
+                                <label for="nome" class="col-form-label">Nome</label> <input type="text" th:field="${linea.nome}" class="form-control" id="nome" placeholder="Nome"> <span th:if="${#fields.hasErrors('nome')}" th:errors="nome" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-8">
-                                <label for="targa" class="col-form-label">Targa</label> <input type="text" th:field="${mezzo.targa}" class="form-control" id="targa" placeholder="targa"> <span th:if="${#fields.hasErrors('targa')}" th:errors="*{targa}" class="text-danger"></span>
+                                <label for="partenza" class="col-form-label">Partenza</label> <input type="text" th:field="${linea.partenza}" class="form-control" id="partenza" placeholder="Partenza"> <span th:if="${#fields.hasErrors('partenza')}" th:errors="partenza" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-8">
-                                <label for="tipo" class="col-form-label">Tipo</label> <input type="text" th:field="${mezzo.tipo}" class="form-control" id="tipo" placeholder="Tipo"> <span th:if="${#fields.hasErrors('tipo')}" th:errors="tipo" class="text-danger"></span>
+                            <label for="destinazione" class="col-form-label">Destinazione</label> <input type="text" th:field="${linea.destinazione}" class="form-control" id="destinazione" placeholder="Destinazione"> <span th:if="${#fields.hasErrors('destinazione')}" th:errors="destinazione" class="text-danger"></span>
                             </div>
 
                             <div class="form-group col-md-8">
-                                <input type="submit" class="btn btn-primary" value="Aggiorna mezzo">
+                                <input type="submit" class="btn btn-primary" value="Inserisci Linea">
                             </div>
                         </div>
                     </form>
