--- a/tem/src/main/resources/templates/register_success.html
+++ b/tem/src/main/resources/templates/register_success.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Registration Success</title>
+    <link rel="stylesheet" href="css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
 	<nav th:replace="/header :: header"><p>Prova</p></nav>
     <div class="container text-center">
-        <h3>Hai effettuato l'accesso con successo!</h3>
+        <h3>Hai effettuato la registrazione con successo!</h3>
         <h4><a href="/login">Clicca qui per effettuare il Login</a></h4>
     </div>
      
