--- a/tem/src/main/resources/templates/signup_form.html
+++ b/tem/src/main/resources/templates/signup_form.html
@@ -5,6 +5,7 @@
 	<meta charset="ISO-8859-1">
 	<title>Registrazione - Transport Efficiency Manager</title>
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+	<link rel="stylesheet" href="css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
 	<nav th:replace="/header :: header"><p>Prova</p></nav>
@@ -87,7 +88,7 @@
 			</div>
 			
 			<div class="form-group row">
-				<label class="col-4 col-form-label">Città: </label>
+				<label class="col-4 col-form-label">Citt&agrave;: </label>
 				<div class="col-8">
 					<input type="text" th:field="${dettaglioUtente.citta}" class="form-control" 
 							required minlength="2" maxlength="20" />
