--- a/tem/static/style.css
+++ b/tem/static/style.css
@@ -30,7 +30,7 @@ td {
 	text-align: center;
 }
 nav {
-	background-color: #008B8B;
+	background-color: #212126;
 	border: 1px solid white;
 }
 nav > p  {
