--- a/tem/src/main/resources/static/css/style.css
+++ b/tem/src/main/resources/static/css/style.css
@@ -1,188 +1,269 @@
-body {
-  background-color: #ffffff;
-  font-family: sans-serif;
-  color: blue; 
+html,body {
+  margin: 0;
+  padding: 0;
+}
+
+.button1 {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-color: #00ccff;
+  border: none;
+  color: white;
+  padding: 5px 20px;
+  text-align: center;
+  font-size: 18px;
+  margin: opx 0px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  margin-left:140px;
+  position:relative;
+  border-radius:25px;
+  font-family: Segoe UI Light;
+  font-weight:bold;
+}
+
+.button2 {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-color: #f4511e;
+  border: none;
+  color: white;
+  padding: 5px 20px;
+  text-align: center;
+  font-size: 18px;
+  margin: 0px 0px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  margin-top: 55px;
+  margin-left:56px;
+  position:relative;
+  border-radius:25px;
+  font-family: Segoe UI Light;
+  font-weight:bold;
+}
+
+
+
+.button1:hover {opacity: 1}
+
+.button2:hover {opacity: 1}
+
+.testo{
+  font-family: Segoe UI Light;
+  color:#ffffff;
+  padding: 20;
+  font-size:23px; 
+  margin-left:65px;
+}
+.titolo {
+  font-family: Segoe UI Light;
+  color:#ffffff;
+  margin-top: 16px;
+  padding: 0;
+  font-size:40px; 
+  margin-left:65px;
+  font-weight:bold;
+ 
+}
+
+.manager{
+	font-family: Segoe UI Light;
+	font-size:40px; 
+	color:#ff3300;
+	font-weight: bold;
+}
+
+.introduzione{
+  position:absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 a:link {
-	color: #21abcd;
+	color: #730202;
+	text-decoration: none;
 }
 
 a:visited {
-	color: #cc0000;
+	color: #730202;
+	text-decoration: none;
 }
 
-h1 {
-  color: #007fff;
-  margin-top: 20px;
-  padding: 0;
-}
-
-table {
-	border: thick; 
-}
-
-th {
-	color: #0db0ff;
-}
-
-td {
-	text-align: center;
-}
-nav {
-	background-color: #008B8B;
-	border: 1px solid white;
-}
-nav > p  {
-	color: white;
-}
-#navbarContainer {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: black;
-}
-.navbar {
-  float: left;
-  border-right: 1px solid white;
-}
-.navbar a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
+a:hover {
+  color: #ffffff;
   text-decoration: none;
 }
-.navbar a:hover {
-  background-color: #111;
-}
 
-/* div#container { */
-/* 	overflow-x: auto; */
-/* } */
-
-/* #catalogo { */
-/* 	overflow-x: auto; */
-/* } */
-
-.greeting {
-	display: inline-block;
-	padding: 4px;
-	height: 100%; 
-}
-
-#containerMenu {
-	padding: 5px;
-}
-
-#levati {
-	display: none;
-}
-
-img {
-	width: 100%;
-	height: 100%;
-}
-	
-.center {
-  	display: block;
-  	margin-top: 2%;
-  	margin-left: auto;
-  	margin-right: auto;
-  	width: 30%;
-  	height: 40%;
-}
-
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0; 
-  left: 0;
-  background-color: black;
-  overflow-x: hidden;
-  padding-top: 60px;
-  transition: 0.5s;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
+.parent {
+  position: relative;
   top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+  left: 0;
+}
+
+.header {
+  padding: 5px 5px;
+  text-align: center;
+  background-color:#01000f;
+  font-size: 30px;
+  overflow: hidden;
+  position: relative;
+  position: -webkit-sticky;
+  transition: top 0.3s;
+  top: 0;
+  margin: 0;
+}
+
+.sfondo {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+
+}
+
+.logo{
+  position: absolute;
+  top: 20px;
+  left: 550px;
+  bottom:0px;
 }
 
 .footer { 
-	background:black;
-	color:#555555;
+    font-family: Segoe UI Light;
+	background:#01000f;
+	color:#c0c0c0;
 	position:relative;
 	text-align:center;
 	padding-left:100px;
 	padding-right:100px;
-	padding-top:60px;
-	padding-bottom: 30px;
-	margin-top: 30%;
-	margin-bottom: 0%;   
+	padding-top:10px;
+	padding-bottom: 20px;
+	margin-top: -2%;
+	margin-bottom: 0%; 
+   
 }
-     
-.pageSpace {
-	min-height:100%;
-}
-     
+
 .dueColonne {
 	column-count: 2;
 	column-gap: 10%;
 	color:#808080;
 }
 
-@media screen and (max-width: 1000px) {
-	#levati {
-		display: inline;
-	}
-	
-	#levati:hover {
-		cursor: pointer;
-	}
-	.navbar {
-		display: none;
-	}
-	
-	.ham {
-  		width: 30px;
-  		height: 4px;
-  		background-color: white;
-  		margin: 6px 0;
-	}
-	table {
-		margin: 10%;
-		border: thick;
-		border-collapse:separate;
-		border-spacing:0 15px; 
-	}
-	
-	th {
-		display: none;
-	}
-	
-	td {
-		display: inline-block;
-		width: 100%;
-		text-align: center;
-	}
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
 }
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.icon-instagram {
+  background: #125688;
+  color: white;
+}
+
+.icon-whatsapp {
+  background: #25d366;
+  color: white;
+}
+
+input {
+	 width: 50%;
+}
+
+
+
+.button3 {
+  background-color: #f4511e;
+  border: none;
+  color: white;
+  padding: 5px 20px;
+  text-align: center;
+  font-size: 18px;
+  margin: 0px 0px;
+  opacity: 2;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  margin-top: 55px;
+  margin-left:190px;
+  position:relative;
+  border-radius:25px;
+  font-family: Segoe UI Light;
+  font-weight:bold;
+}
+
+.container {
+  border-radius: 8px;
+  background-color: #004080;
+  padding: 20px;
+  padding-top:5px;
+  padding-left:100px;
+  margin-top:270px;
+}
+
+input[type=text], input[type=password], input[type=email]{
+  margin: 0px 0 2px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus, input[type=email] {
+  background-color: #ddd;
+  outline: none;
+}
+
+input[type=text], input[type=password],input[type=email],select, textarea {
+  width: 50%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+
+}
+
+
+label {
+  display: inline-block;
+  width: 120px;
+  text-align:left;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+
+
+
+
+
+
+
+	
