--- a/tem/src/main/resources/templates/signup_form.html
+++ b/tem/src/main/resources/templates/signup_form.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="sfondo">
-	<img src=src="img/sfondo.jpg" th:src="@{/img/sfondo.jpg}" alt="sfondo"></img>
+	<img src="img/sfondo.jpg" th:src="@{/img/sfondo.jpg}" alt="sfondo"></img>
 	<a href="/" ><img class="logo" id="logo" src="img/logo2.png" th:src="@{/img/logo2.png}" alt="logo" style="width:265px;height:44px;"></img></a>
 	<div class="introduzione">
 		<div class="container">
