--- a/tem/src/main/resources/templates/index.html
+++ b/tem/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 	<img src=src="img/sfondo.jpg" th:src="@{/img/sfondo.jpg}" alt="sfondo"></img>
 	<div class="introduzione">
 	<span class="testo"><span style="margin-left:163px;">Benvenuto su <br></span><span class="titolo">Transport Efficiency</span><span class="manager"> Manager<br></span>
-	Genera un programma di corse pi&uacute; efficiente per la tua azienda.<br></span>
+	Genera un programma di corse pi&ugrave; efficiente per la tua azienda.<br></span>
 	<span>
 	      <button class="button1"><a href="/login">Accedi</a></button>
 	      <button class="button2"><a href="/register">Registra la tua azienda</a></button>
