--- a/tem/src/main/resources/static/css/style.css
+++ b/tem/src/main/resources/static/css/style.css
@@ -108,7 +108,7 @@ a:hover {
 .header {
   padding: 5px 5px;
   text-align: center;
-  background-color:#01000f;
+  background-color: #01000f;
   font-size: 30px;
   overflow: hidden;
   position: relative;
@@ -216,15 +216,19 @@ input {
 
 .container {
   border-radius: 8px;
-  background-color: #004080;
+  background-color: rgba(1, 0, 15, 0.7);
   padding: 20px;
-  padding-top:5px;
-  padding-left:100px;
-  margin-top:270px;
-}
+  padding-top: 5px;
+  padding-left: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 270px;
+  margin-bottom: 100px;
+  box-shadow: 5px 5px 5px black;
+  }
 
 input[type=text], input[type=password], input[type=email]{
-  margin: 0px 0 2px 0;
+  margin: 4px 0 2px 0;
   border: none;
   background: #f1f1f1;
 }
@@ -245,8 +249,11 @@ input[type=text], input[type=password],input[type=email],select, textarea {
 
 label {
   display: inline-block;
-  width: 120px;
-  text-align:left;
+  width: 140px;
+  text-align: left;
+  color: white;
+  font-family: calibri;
+  font-size: 20px;
 }
 
 * {
@@ -259,11 +266,3 @@ label {
     width: 100%;
     margin-top: 0;
   }
-
-
-
-
-
-
-
-	
