--- a/tem/src/main/resources/templates/index.html
+++ b/tem/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
  
 	<div class="parent">
 	<div class="sfondo">
-	<img src=src="img/sfondo.jpg" th:src="@{/img/sfondo.jpg}" alt="sfondo"></img>
+	<img src="img/sfondo.jpg" th:src="@{/img/sfondo.jpg}" alt="sfondo"></img>
 	<div class="introduzione">
 	<span class="testo"><span style="margin-left:163px;">Benvenuto su <br></span><span class="titolo">Transport Efficiency</span><span class="manager"> Manager<br></span>
 	Genera un programma di corse pi&ugrave; efficiente per la tua azienda.<br></span>
