--- a/tem/src/main/resources/static/css/style.css
+++ b/tem/src/main/resources/static/css/style.css
@@ -136,7 +136,10 @@ a:hover {
   left: 550px;
   bottom:0px;
 }
-
+img {
+	width: 100%;
+	height: 100%;
+}
 .footer { 
     font-family: Segoe UI Light;
 	background:#01000f;
